@@ -1,5 +1,13 @@
 [b]Version 0.6.6[/b]:
 
+(2008-12-26)
+ * The language filter in the find subtitles dialog is now saved to the ini 
+   file.
+ * New option for smplayer.ini: include_lang_on_filename (section 
+   [findsubtitles]). If set to true (the default) the language code is 
+   appended to the subtitle filename (e.g. video.avi => video_es.srt).
+   Otherwise the language code is not appended (video.avi => video.srt).
+
 (2008-12-24)
  * Implemented a different way to select the initial subtitle track (or restore
    the old one after a restart). Still needs some testing.
